# receipt-analytics

./: .coveragerc  .env.example  Dockerfile  LICENSE  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements-poetry.txt
.github/workflows/: lint.yml
app/: app.py  commands.py  database.py  email.py  extensions.py  settings.py
app/public/: forms.py  views.py
app/static/: cache_manifest.json
app/templates/: 401.html  footer.html  form.html  layout.html  nav.html
app/templates/email/: reset_password.html  reset_password.txt
app/templates/macros/: bootstrap_wtf.html
app/templates/partials/: _footer.html  _nav.html
app/templates/public/: home.html
app/templates/users/: edit_profile.html  profile.html  user.html
app/templates/users/partials/: _settings_nav.html
app/user/: email.py  forms.py  models.py  views.py
migrations/versions/: 663c79d7be3b_.py  6a20b04ccc08_initial_migration.py  c19dd1516d57_.py
requirements/: dev.txt  prod.txt
tests/: settings.py  test_database.py  test_forms.py  test_functional.py  test_models.py  test_urls.py
